ProjectStore. File add feature fix + Style

--- a/ProjectOne/appsettings.json
+++ b/ProjectOne/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AppConnectionString": "Server=LAPTOP-CSIKF729;Database=StoreDbCourse;Trusted_Connection=True;Encrypt=False;MultipleActiveResultSets=true"
+    "AppConnectionString": "Server=WIN-6NETBA49I26;Database=StoreDbCourse;Trusted_Connection=True;Encrypt=False;MultipleActiveResultSets=true"
   }
 }
